--- a/index.hbs
+++ b/index.hbs
@@ -36,7 +36,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner" style="text-align: left; background-image: url('{{banner-image}}');">
+				<section id="banner" style="text-align: {{banner-position}}; background-image: url('{{banner-image}}');">
 					<div class="content">
 						<header>
 							<h2>{{home_subtitle}}</h2>
